Fix Resume on mobile + added internship search

--- a/app/src/styles/screens/about.css
+++ b/app/src/styles/screens/about.css
@@ -1,6 +1,5 @@
 .citation{
     margin-top: 3%;
-    font-style: italic;
     text-align: center;
     padding-bottom: 1%;
     padding-inline: 20%;
@@ -24,7 +23,6 @@
     }
     .presentation-sentence {
         padding-bottom: 1%;
-        padding-inline: 1%;
         font-size: 0.9em;
     }
 }
@@ -39,6 +37,7 @@
         font-size: 1.1em;
         padding-bottom: 3%;
         text-indent: 5%;
+        text-align: justify;
     }
     .container-global-about {
         padding-bottom: 15%;
